--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     text-align: center;
+  }
+  h1 {
+    font-weight: 200;
+    font-size: 3em;
+    margin: 0 0 0.1em 0;
+  }
+  
+  h2 {
+    font-weight: 200;
+    font-size: 0.9em;
+    margin: 0 0 50px;
+    color: #999;
   }
